@@ -1,5 +1,6 @@
 2013-09-17  bulgarelli  <bulgarelli@abmac.local>
 
+	* code/CTAPacket.cpp (RTATelem::CTAPacket::CTAPacket): RTATelem::CTAPacket::CTAPacket(string packetConfig)
 	* code/CTAPacket.h (CTAPacket): dword getInputPacketDimension(byte* stream);
 
 2013-09-10  Andrea Bulgarelli  <bulgarelli@iasfbo.inaf.it>
